--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ ecosystem.config.js
 # Ignore node_modules directories in frontend and server
 /client/node_modules/
 /server/node_modules/
+/server/uploads/
 
 # Optional: Ignore build output in frontend
 /client/build/
