--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ ecosystem.config.js
 /client/node_modules/
 /server/node_modules/
 /server/uploads/
-
+uploads/
 # Optional: Ignore build output in frontend
 /client/build/
